2015-03-06         Arnold D. Robbins     <arnold@skeeve.com>

	* charasbytes.awk, ofs1.awk, range1.awk, sortglos.awk,
	sortglos.in: Remove execute permission.

2015-02-26         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): Add profile0.in which got forgotten
	earlier. Ooops.

2015-02-24         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (crlf): New test.
	* crlf.awk, crlf.ok: New files.

2015-02-10         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (profile0): New test.
	* profile0.awk, profile0.in, profile0.ok: New files.

2015-02-01         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (paramasfunc1, paramasfunc2): Now need --posix.
	* indirectcall.awk: Restore after code change.

2015-01-30         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (callparam, paramasfunc1, paramasfunc2): New tests.
	* callparam.awk, callparam.ok: New files.
	* paramasfunc1.awk, paramasfunc1.ok: New files.
	* paramasfunc2.awk, paramasfunc2.ok: New files.
	* exit.sh, indirectcall.awk: Update after code change.

2015-01-14         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (dumpvars): Grep out ENVIRON and PROCINFO since
	those can be different depending on who runs the test.
	* dumpvars.ok, id.ok: Updated after code changes.

2015-01-07         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (regexpbrack): New test.
	* regexpbrack.awk, regexpbrack.in, regexpbrack.ok: New files.

	Unrelated:

	* Makefile.am (printfbad4): New test.
	* printfbad4.awk, printfbad4.ok: New files.

	Unrelated:

	* testext.ok: Adjust for code changes.

2014-12-24         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (badbuild): New test.
	* badbuild.awk, badbuild.in, badbuild.ok: New files.

2014-12-24         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (check): If tests don't pass, run 'make diffout'
	and exit 1. Should help distros to notice when they have built