@@ -285,6 +285,8 @@ EXTRA_DIST = \
 	fpat3.awk \
 	fpat3.in \
 	fpat3.ok \
+	fpat4.awk \
+	fpat4.ok \
 	fpatnull.awk \
 	fpatnull.in \
 	fpatnull.ok \
@@ -1034,7 +1036,7 @@ GAWK_EXT_TESTS = \
 	aadelete1 aadelete2 aarray1 aasort aasorti argtest arraysort \
 	backw badargs beginfile1 beginfile2 binmode1 charasbytes \
 	colonwarn clos1way crlf dbugeval delsub devfd devfd1 devfd2 dumpvars exit \
-	fieldwdth fpat1 fpat2 fpat3  fpatnull fsfwfs funlen \
+	fieldwdth fpat1 fpat2 fpat3 fpat4 fpatnull fsfwfs funlen \
 	functab1 functab2 functab3 fwtest fwtest2 fwtest3 \
 	genpot gensub gensub2 getlndir gnuops2 gnuops3 gnureops \
 	icasefs icasers id igncdym igncfs ignrcas2 ignrcase \
