@@ -1,3 +1,8 @@
+2015-03-10         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (fpat4): New test.
+	* fpat4.awk, fpat4.ok: New files.
+
 2015-03-06         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* charasbytes.awk, ofs1.awk, range1.awk, sortglos.awk,
